--- a/arch/arm64/boot/dts/freescale/imx8mm.dtsi
+++ b/arch/arm64/boot/dts/freescale/imx8mm.dtsi
@@ -572,7 +572,7 @@
 				pgc {
 					#address-cells = <1>;
 					#size-cells = <0>;
-
+#if 0
 					pgc_hsiomix: power-domain@0 {
 						#power-domain-cells = <0>;
 						reg = <IMX8MM_POWER_DOMAIN_HSIOMIX>;
@@ -596,7 +596,7 @@
 						reg = <IMX8MM_POWER_DOMAIN_OTG2>;
 						power-domains = <&pgc_hsiomix>;
 					};
-
+#endif
 					pgc_gpumix: power-domain@4 {
 						#power-domain-cells = <0>;
 						reg = <IMX8MM_POWER_DOMAIN_GPUMIX>;
@@ -1042,7 +1042,7 @@
 				assigned-clock-parents = <&clk IMX8MM_SYS_PLL2_500M>;
 				fsl,usbphy = <&usbphynop1>;
 				fsl,usbmisc = <&usbmisc1 0>;
-				power-domains = <&pgc_otg1>;
+				//power-domains = <&pgc_otg1>;
 				status = "disabled";
 			};
 
@@ -1062,7 +1062,7 @@
 				assigned-clock-parents = <&clk IMX8MM_SYS_PLL2_500M>;
 				fsl,usbphy = <&usbphynop2>;
 				fsl,usbmisc = <&usbmisc2 0>;
-				power-domains = <&pgc_otg2>;
+				//power-domains = <&pgc_otg2>;
 				status = "disabled";
 			};
 
