ARM: dts: imx6ul-kontron-n6x1x-s: Provide a label to the rtc
Provide a label to the Epson RTC, so that users of this dtsi
can disable this RTC node if needed.

Signed-off-by: Fabio Estevam <festevam@gmail.com>

--- a/arch/arm/boot/dts/imx6ul-kontron-n6x1x-s.dtsi
+++ b/arch/arm/boot/dts/imx6ul-kontron-n6x1x-s.dtsi
@@ -146,7 +146,7 @@
 	pinctrl-0 = <&pinctrl_i2c4>;
 	status = "okay";
 
-	rtc@32 {
+	epson_rtc: rtc@32 {
 		compatible = "epson,rx8900";
 		reg = <0x32>;
 	};
