ARM: dts: imx6ull-a1-gw: Fix the RTC description
The imx6ull-a1-gw board has a M41T00 RTC, and not an Epson RTC
as provided by imx6ul-kontron-n6x1x-s.dtsi.

This causes the following error:

rtc-rv8803 3-0032: Unable to read register 0x0e

Fix it by disabling the Epson RTC and describe the M41T00 RTC that
is populated on the board.

Signed-off-by: Fabio Estevam <festevam@gmail.com>

--- a/arch/arm/boot/dts/imx6ull-a1-gw.dts
+++ b/arch/arm/boot/dts/imx6ull-a1-gw.dts
@@ -14,11 +14,27 @@
 	compatible = "automation-one,imx6ull-gw", "kontron,imx6ull-n6411-s",
 		     "kontron,imx6ull-n6411-som", "fsl,imx6ull";
 
+	aliases {
+		rtc0 = &st_rtc;
+		rtc1 = &snvs_rtc;
+	};
+
 	/delete-node/ gpio-leds;
 
 	usdhc2_pwrseq: usdhc2_pwrseq {
 		compatible = "mmc-pwrseq-simple";
 		reset-gpios = <&gpio4 10 GPIO_ACTIVE_LOW>;
+	};
+};
+
+&epson_rtc {
+	status = "disabled";
+};
+
+&i2c4 {
+	st_rtc: m41t00@68 {
+		compatible = "st,m41t00";
+		reg = <0x68>;
 	};
 };
 
